// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertLink renders 1`] = `
<div>
  <a
    class="ear9tuy3 css-l9fiww-Link-StyledLink e1ycxor00"
  >
    <div
      class="css-s2q57m-AlertLinkText ear9tuy0"
    >
      This is an external link button
    </div>
    <span
      class="css-1awjzu4-IconWrapper-IconLink ear9tuy1"
    >
      <svg
        class="css-grvq9j-IconChevron"
        fill="currentColor"
        height="16px"
        viewBox="0 0 16 16"
        width="16px"
      >
        <path
          d="M14,11.75a.74.74,0,0,1-.53-.22L8,6.06,2.53,11.53a.75.75,0,0,1-1.06-1.06l6-6a.75.75,0,0,1,1.06,0l6,6a.75.75,0,0,1,0,1.06A.74.74,0,0,1,14,11.75Z"
        />
      </svg>
    </span>
  </a>
</div>
`;

exports[`AlertLink renders with icon 1`] = `
<div>
  <a
    class="ear9tuy3 css-l9fiww-Link-StyledLink e1ycxor00"
  >
    <span
      class="css-xaijms-IconWrapper ear9tuy2"
    >
      <svg
        fill="currentColor"
        height="16px"
        viewBox="0 0 16 16"
        width="16px"
      >
        <path
          d="M15.25,14.09H.75A.76.76,0,0,1,0,13.34V2.66a.76.76,0,0,1,.75-.75h14.5a.76.76,0,0,1,.75.75V13.34A.76.76,0,0,1,15.25,14.09ZM1.5,12.59h13V3.41H1.5Z"
        />
        <path
          d="M8,9.92a.78.78,0,0,1-.5-.19L.25,3.22a.75.75,0,1,1,1-1.12L8,8.16,14.75,2.1a.75.75,0,1,1,1,1.12L8.5,9.73A.78.78,0,0,1,8,9.92Z"
        />
        <rect
          height="1.5"
          transform="translate(-6.17 5.21) rotate(-41.89)"
          width="7.99"
          x="-0.27"
          y="9.92"
        />
        <rect
          height="7.99"
          transform="translate(-3.86 12.68) rotate(-48.09)"
          width="1.5"
          x="11.52"
          y="6.67"
        />
      </svg>
    </span>
    <div
      class="css-s2q57m-AlertLinkText ear9tuy0"
    >
      This is an external link button
    </div>
    <span
      class="css-1awjzu4-IconWrapper-IconLink ear9tuy1"
    >
      <svg
        class="css-grvq9j-IconChevron"
        fill="currentColor"
        height="16px"
        viewBox="0 0 16 16"
        width="16px"
      >
        <path
          d="M14,11.75a.74.74,0,0,1-.53-.22L8,6.06,2.53,11.53a.75.75,0,0,1-1.06-1.06l6-6a.75.75,0,0,1,1.06,0l6,6a.75.75,0,0,1,0,1.06A.74.74,0,0,1,14,11.75Z"
        />
      </svg>
    </span>
  </a>
</div>
`;
